syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {

string firstName =1;
string lastName = 2;



}
message GreetRequest{
  Greeting greeting = 1;
}

message GreetResponse{
  string result =1; //will return the persons name in unary api just a basic greeting

}

message PromoStreamRequest{

  string promo1 =1; //promos will be used in server streaming as part of greet service to advertise bank promotions
  string promo2 =2;
  string promo3 =3;
  string promo4 =4;
  string promo5 =5;
  string promo6 =6;
  string promo7 =7;


}message PromoStreamResponse{

  string promo1 =1; //promos will be used in server streaming as part of greet service to advertise bank promotions
  string promo2 =2;
  string promo3 =3;
  string promo4 =4;
  string promo5 =5;
  string promo6 =6;
  string promo7 =7;


}
service GreetService{ //first service, will be unary API that will ask the users name and greet them

  rpc Greet(GreetRequest) returns (GreetResponse) {};

  rpc PromoStream (PromoStreamRequest) returns (stream PromoStreamResponse) {}; //within the greet service but should be second service to display banks promotions


}